@@ -1,3 +1,6 @@
+2014-05-24 Molnar Karoly <molnarkaroly@users.sf.net>
+	* tools/device-help.pl: updated
+
 2014-05-01 Molnar Karoly <molnarkaroly@users.sf.net>
 	* tools/device-help.pl: updated
 
